[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/shaft.png" type="Texture" id=1]
[ext_resource path="res://assets/pod.png" type="Texture" id=2]
[ext_resource path="res://reactor.gd" type="Script" id=3]
[ext_resource path="res://containmentvessel.gd" type="Script" id=4]
[ext_resource path="res://assets/circle.png" type="Texture" id=5]
[ext_resource path="res://magic_circle.gd" type="Script" id=6]
[ext_resource path="res://stat_label.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 176.63

[node name="ColorRect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.29959
margin_top = 30.8144
margin_right = -2.29956
margin_bottom = 34.8144
custom_constants/margin_right = 40
custom_constants/margin_top = 10
custom_constants/margin_left = 40
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 10.0
margin_right = 1240.0
margin_bottom = 714.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 700.0

[node name="VerticalDistance" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 700.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
texture = ExtResource( 1 )

[node name="ContainmentVessel" type="Node2D" parent="MarginContainer/VBoxContainer/HBoxContainer/VerticalDistance"]
position = Vector2( 60, 120 )
script = ExtResource( 4 )

[node name="Pod" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/VerticalDistance/ContainmentVessel"]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Elevator" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 208.0
margin_bottom = 700.0
rect_min_size = Vector2( 40, 0 )
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Elevator"]
margin_left = 4.0
margin_top = 4.0
margin_right = 80.0
margin_bottom = 696.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Elevator/VBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/Elevator/VBoxContainer"]
margin_top = 44.0
margin_right = 76.0
margin_bottom = 648.0
size_flags_vertical = 3

[node name="CheckButton2" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Elevator/VBoxContainer"]
margin_top = 652.0
margin_right = 76.0
margin_bottom = 692.0

[node name="MainScreen" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 988.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MagicCircle" type="Area2D" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen"]
position = Vector2( 427.191, 335.437 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen/MagicCircle"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen/MagicCircle"]
shape = SubResource( 1 )

[node name="PowerLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen"]
margin_right = 776.0
margin_bottom = 14.0
text = "Power: 100"
script = ExtResource( 7 )
statname = "Power"

[node name="ShieldLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen"]
margin_top = 18.0
margin_right = 776.0
margin_bottom = 32.0
text = "Power: 100"
script = ExtResource( 7 )
statname = "Shielding"

[node name="StabLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen"]
margin_top = 36.0
margin_right = 776.0
margin_bottom = 50.0
text = "Power: 100"
script = ExtResource( 7 )
statname = "Stability"

[node name="TsunLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen"]
margin_top = 54.0
margin_right = 776.0
margin_bottom = 68.0
text = "Power: 100"
script = ExtResource( 7 )
statname = "Tsun"

[node name="YanLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen"]
margin_top = 72.0
margin_right = 776.0
margin_bottom = 86.0
text = "Power: 100"
script = ExtResource( 7 )
statname = "Yan"

[node name="DereLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MainScreen"]
margin_top = 90.0
margin_right = 776.0
margin_bottom = 104.0
text = "Power: 100"
script = ExtResource( 7 )
statname = "Dere"

[node name="ListPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 992.0
margin_right = 1200.0
margin_bottom = 700.0
rect_min_size = Vector2( 208, 0 )

[node name="WitchList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ListPanel"]
margin_right = 208.0
margin_bottom = 676.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ListPanel"]
margin_top = 680.0
margin_right = 208.0
margin_bottom = 700.0
text = "SUMMON"

[node name="BottomBuffer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 704.0
margin_right = 1200.0
margin_bottom = 704.0
size_flags_vertical = 3

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/ListPanel/Button" to="." method="_on_Button_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ListPanel/Button" to="." method="_on_Button_pressed"]
